# fwber

./: .borg-session.json  .borg_startup_marker  .chunkhound.json  .env  .env.bak2  .env.example  .env.testing.example  .gitignore  .gitmodules  .hypercode-session.json  .hypercode_startup_marker  ADMIN_PANEL_IMPLEMENTATION.md  AGENTS.md  AI_COORDINATION_README.md  AI_DECISIONS.md  AI_INTERFACES_DOCUMENTATION.md  AI_MODEL_INSTRUCTIONS_AND_COMMANDS.md  AI_ORCHESTRATION_GUIDE.md  AI_ORCHESTRATION_INDEX.md  AI_ORCHESTRATION_SETUP_GUIDE.md  AI_PANEL_CONSENSUS_REPORT.md  AI_TASKS.md  AI_TOOLS_AND_MODELS_DOCUMENTATION.md  ALL_MCP_SERVERS_WORKING_REPORT.md  CHANGELOG.md  CHANGELOG.md.new  CHEETAH_MULTI_MODEL_ORCHESTRATION_REPORT.md  CLAUDE.md  CLAUDE_SESSION_2025-10-12.md  CLINE_PROJECT_ANALYSIS.md  CLI_MCP_FINAL_STATUS_REPORT.md  CLI_TEST_RESULTS.md  CLI_TOOLS_CONFIGURATION_SUMMARY.md  CODEX.md  CODEX_MCP_CONFIGURATION.md  CODEX_MCP_DIAGNOSIS_REPORT.md  CODEX_MCP_FIXES_2025_01_19.md  COMPREHENSIVE_AI_ORCHESTRATION_SYSTEM.md  COMPREHENSIVE_PROJECT_STATUS_2025_11_19.md  CONTRIBUTING.md  (+333 more)
.claude/: settings.local.json
.codex/: config.toml
.copilot/: mcp.json
.cursor/: environment.json  mcp.json
.gemini/: settings.json  settings.json.orig
.github/: copilot-instructions.md
.memory/: main.md  state.yaml
.pi/: caps-context-state.json  taskplane.json
.pi-lens/: change-log.jsonl  code-quality-warnings.jsonl  metrics-history.json  turn-state.json
.serena/: project.yml
.sisyphus/: ralph-loop.local.md
app/: error.tsx  (+3 more)
fwber-wasm/: Cargo.toml
fwber-wasm/src/: lib.rs
(+21380 files in other folders)
